--- a/index.html
+++ b/index.html
@@ -1,18 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
-  </body>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+    <nav class="nav-bar">
+        <ul class="nav-bar-list">
+            <li><a class="nav-bar-item">Premium</a></li>
+            <li>
+                <a class="nav-bar-item"></a>Discover</li>
+            <li>
+                <a class="nav-bar-item"></a>Help</li>
+            <li>
+                <a class="nav-bar-item"></a>Download</li>
+        </ul>
+    </nav>
+    <header class="header"></header>
+    <h1>Music for ever</h1>
+    <h3>
+        <p>Spotify is now free on mobile, table and computer.</p>
+        <p>Listen to the right music, wherever you are.</p>
+    </h3>
+
+    <section>
+        <h2>What´s on Spotify?</h2>
+        <img src="/Users/luciavilar/Desktop/code/lab-css-spotify-clone/images/high-quality-icon.png" />
+        <p> Millions of Songs</p>
+        <p>There are millions of songs on Spotify</p>
+        <p> HD Music</p>
+        <p>Listen to music as is you were listening live</p>
+    </section>
+    <section>
+        <p>It´s a yeezy as Kanye West</p>
+
+    </section>
+    <section></section>
+    <section></section>
+    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music Listen to music as
+    if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the latest charts, brand new releases
+    and great playlists for right now. Discover Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio. </body>
+
 </html>
