--- a/index.html
+++ b/index.html
@@ -6,45 +6,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
+    <div class="nav">
 
-    <nav class="nav-bar">
-        <ul class="nav-bar-list">
-            <li><a class="nav-bar-item">Premium</a></li>
-            <li>
-                <a class="nav-bar-item"></a>Discover</li>
-            <li>
-                <a class="nav-bar-item"></a>Help</li>
-            <li>
-                <a class="nav-bar-item"></a>Download</li>
+        <div class="logospotify">
+            <img src=" ./images/spotify-logo.png " alt="logo spotify"></div>
+        <div>
+            <h4>
+                <nav class="nav-bar ">
+                    <ul class="nav-bar-list ">
+                        <li>
+                            <a class="nav-bar-item " href="#"></a>Premium</li>
+                        <li>
+                            <a class="nav-bar-item " href="#"></a>Discover</li>
+                        <li>
+                            <a class="nav-bar-item " href="#"></a>Help</li>
+                        <li>
+                            <a class="nav-bar-item " href="#"></a>Download</li>
+                    </ul>
+                </nav>
+            </h4>
+        </div>
+    </div>
+    <header class="header ">
+        <h1>Music for everyone</h1>
+
+        <h3>
+            <p>Spotify is now free on mobile, table and computer.</p>
+            <p>Listen to the right music, wherever you are.</p>
+        </h3>
+    </header>
+    <!--  section 1 -->
+
+    <section class="about ">
+
+
+        </h2>What´s on Spotify?</h2>
+        <div class="container">
+            <article class="whitebox ">
+                <img src=" ./images/music-icon.png" class=" icon " />
+                <h3></h3>
+                <p> Millions of Songs</p>
+                <p>There are millions of songs on Spotify</p>
+            </article>
+            <article class="whitebox ">
+                <img src=" ./images/high-quality-icon.png " class=" icon " />
+                <p> HD Music</p>
+                <p>Listen to music as is you were listening live</p>
+            </article>
+            <article class="whitebox ">
+                <img src=" ./images/devices-icon.png " class=" icon " />
+                <p> Stream Everywhere</p>
+                <p>Stream music on your smartphone, tablet or computer</p>
+            </article>
+        </div>
+    </section>
+
+    <!--  section 2 -->
+
+    <section class="greenbackground " id="action ">
+        <h2>
+            <p>It´s a yeezy as Kanye West</p>
+        </h2>
+        <ul class="actionlist ">
+            <li>Search</li>
+            <p>Know what you want to listen to? Just search and hit play.</p>
+            <li>Browse</li>
+            <p>Check out the latest charts, brand new releases and great playlists for right now.</p>
+            <li>Discover</li>
+            <p>Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio.</p>
         </ul>
-    </nav>
-    <header class="header"></header>
-    <h1>Music for ever</h1>
-    <h3>
-        <p>Spotify is now free on mobile, table and computer.</p>
-        <p>Listen to the right music, wherever you are.</p>
-    </h3>
-
-    <section>
-        <h2>What´s on Spotify?</h2>
-        <img src="/Users/luciavilar/Desktop/code/lab-css-spotify-clone/images/high-quality-icon.png" />
-        <p> Millions of Songs</p>
-        <p>There are millions of songs on Spotify</p>
-        <p> HD Music</p>
-        <p>Listen to music as is you were listening live</p>
+        <img src="./images/spotify-icon-white.png ">
+        <img src="./images/spotify-app.jpg ">
     </section>
-    <section>
-        <p>It´s a yeezy as Kanye West</p>
 
-    </section>
-    <section></section>
-    <section></section>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music Listen to music as
-    if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the latest charts, brand new releases
-    and great playlists for right now. Discover Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio. </body>
+
+</body>
 
 </html>
